helm/WIP/apache-agent/apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  type: NodePort
  #type: ClusterIP
  #type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
  selector:
    agent: apache
